--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,5 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /AccountOwnerServer/appsettings.Development.json
+/AccountOwnerServer/appsettings.json
+/AccountOwnerServer/Properties/launchSettings.json
